log
Thu 28 Mar 2024 02:24:22 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:18: error: ‘Lista’ undeclared (first use in this function); did you mean ‘lista’?
   32 |   List* lista = (Lista *)malloc(sizeof(List));
      |                  ^~~~~
      |                  lista
list.c:32:18: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:25: error: expected expression before ‘)’ token
   32 |   List* lista = (Lista *)malloc(sizeof(List));
      |                         ^
Compilation failed
3021cf7
Thu 28 Mar 2024 02:24:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:25: error: expected expression before ‘)’ token
   32 |   List* lista = (lista *)malloc(sizeof(List));
      |                         ^
Compilation failed
e554b97
Thu 28 Mar 2024 02:25:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0b77c7b
Thu 28 Mar 2024 02:30:32 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bc2afca
Thu 28 Mar 2024 02:32:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
089f94c
Thu 28 Mar 2024 02:37:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
81fbcd0
Thu 28 Mar 2024 02:37:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0ad778f
Thu 28 Mar 2024 02:38:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
28a6047
Thu 28 Mar 2024 02:38:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0f9eeb7
Thu 28 Mar 2024 02:42:34 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1658cd7
Thu 28 Mar 2024 02:43:04 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5320220
Thu 28 Mar 2024 02:43:25 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
be980aa
Thu 28 Mar 2024 02:45:07 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
4d1ea68
Thu 28 Mar 2024 02:46:07 PM UTC: 
 list.c | 13 +++----------
 1 file changed, 3 insertions(+), 10 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
65f7312
Thu 28 Mar 2024 02:46:27 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
bc8a711
Thu 28 Mar 2024 02:47:08 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
19b9606
Thu 28 Mar 2024 02:51:11 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
ed9f60a
Thu 28 Mar 2024 02:56:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
cec1cc4
Thu 28 Mar 2024 02:56:44 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
6491e67
Thu 28 Mar 2024 02:59:15 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
abeaf82
Thu 28 Mar 2024 02:59:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9121a98
Thu 28 Mar 2024 03:00:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f70ee3e
Thu 28 Mar 2024 03:00:25 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:16: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   51 |     return list->next->data;
      |                ^~
Compilation failed
f98d94c
Thu 28 Mar 2024 03:00:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e0da7f9
Thu 28 Mar 2024 03:05:01 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
368ec47
